@@ -1,12 +1,8 @@
 # TKXDPM.KSCQ.20211-08
 ---
-#LAB00 - Tài liệu SRS
+### Capston Project
 
-## Tasks
-Đặc tả use case
-## Contributions
-<p><b>Trần Ngọc Phiên</b> - Vẽ use case,đặc tả usecase xem chi tiết bãi xe, thanh toán giao dịch, thuê xe.</p>
-<p><b>Trần Hải Trung</b> - Vẽ use case, đặc tả use case tìm kiếm bãi xe, trả xe</p>
-<p><b>Đỗ Văn Thông</b> - Vẽ use case, đặc tả use đăng ký, đăng nhập, đăng xuất</p>
-<p><b>Nguyễn Việt Đức</b> - Vẽ use case, đặc tả use case xem chi tiết thông tin xe, xem thông tin xe đang mượn.</p>
-
+## Hướng dẫn cài đặt với IntelliJ
+### JavaFx
+1. Thêm thư viện JavaFx, File -> Project Structure -> Library -> + -> Java -> Include jar trong lib/javafx-sdk-15/lib
+2. Add VM options: Run -> Edit Configuration -> Modify Options -> Add VM options -> Thêm "--module-path lib/javafx-sdk-15/lib --add-modules javafx.controls,javafx.fxml"
